[project]
name = "asockslib"
version = "0.1.1"
description = "Premium Python library and CLI for the ASocks Proxy API"
readme = "README.md"
license = "MIT"
authors = [{ name = "bot4ka" }]
requires-python = ">=3.12"
keywords = ["proxy", "asocks", "socks5", "http-proxy", "rotating-proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Typing :: Typed",
]
dependencies = [
    "beartype>=0.22.9",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "socksio>=1.0.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/bot4ka/asockslib"
Documentation = "https://bot4ka.github.io/asockslib"
Repository = "https://github.com/bot4ka/asockslib"
Issues = "https://github.com/bot4ka/asockslib/issues"

[project.scripts]
asocks = "asockslib.cli:app"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.4",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[[tool.pyright.executionEnvironments]]
# White-box unit tests deliberately reach into private attributes/methods
# (_slots, _is_healthy, _fetch_matching_ports, ...) to test internal state
# directly — that is the intended test design, not a leak of encapsulation.
root = "tests"
reportPrivateUsage = false

[[tool.pyright.executionEnvironments]]
# Typer registers these functions as CLI commands via the `@app.command()`
# decorator at runtime; pyright's static analysis doesn't see that use and
# flags every command as dead code.
root = "src/asockslib/cli"
reportUnusedFunction = false

[[tool.pyright.executionEnvironments]]
root = "."

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# Embedded Markdown/MDX template strings (prose, tables) — wrapping mid-content
# would corrupt rendered docs; the 100-col limit doesn't apply to prose.
"generate_docs.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
